# harmony

./: .tool-versions  BACKLOG.md  Cargo.toml  DESIGN.md  PLAN.md  README.md  Taskfile.yml  package-lock.json
.claude/plans/: proof-17-better-terminal-ui.md  proof-multi-select-fix.md  proof-of-work-19-fix-window-padding.md  proof-of-work-22-split-ci-into-parallel-jobs.md  proof-of-work-draft-pr.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
app/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
app/src/: App.tsx  api.ts  styles.css  styles.test.ts  types.test.ts  types.ts
app/src-tauri/: Cargo.toml  gen-icon.mjs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: Board.tsx  DiffPane.tsx  ErrorBoundary.tsx  FriendlySession.tsx  JiraInfo.tsx  MarkdownField.tsx  MarkdownView.tsx  Orchestrator.tsx  PrComments.tsx  ProgressLine.tsx  ProofPane.tsx  QuestionCard.test.tsx  QuestionCard.tsx  ReviewFeedback.tsx  Sessions.tsx  Settings.tsx  Skeleton.tsx  SpecDiff.tsx  SpecEditor.tsx  Tasks.tsx  Terminal.tsx  TranscriptPane.tsx  Worktrees.tsx
app/src/lib/: refractor.ts  terminalScroll.test.ts  terminalScroll.ts
core/: Cargo.toml
core/src/: activity.rs  ci.rs  claude.rs  cmd_err.rs  draft.rs  flow.rs  flow_doc.rs  github.rs  hooks.rs  jira.rs  lib.rs  main.rs  models.rs  orchestrator.rs  proof.rs  reverify.rs  review.rs  session.rs  settings.rs  spec.rs  store.rs  worktree.rs
core/tests/: flow.rs  flow_doc.rs  integration.rs  live.rs
docs/: cc-gui-ideas.md  flow.md
scripts/: release.mjs
spike/: .gitignore  Cargo.toml  README.md
spike/src/: main.rs
