[package]
name = "harmony-spike"
version = "0.1.0"
edition = "2021"
description = "Phase 0 de-risking spike: prove Claude Code HTTP hooks fire for an interactive PTY session and can return permission decisions."

[[bin]]
name = "harmony-spike"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
portable-pty = "0.8"
serde_json = "1"
anyhow = "1"
