[package]
name = "harmony-app"
version = "0.1.0"
edition = "2021"
description = "harmony desktop app (Tauri 2 backend)"

[lib]
name = "harmony_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
portable-pty = "0.8"
harmony-core = { path = "../../core" }
